--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
     "framer-motion": "^12.4.5",
+    "globe.gl": "^2.41.1",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-globe.gl": "^2.33.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-scroll": "^1.9.3",
     "scroll": "^3.0.1",
     "tailwindcss": "^4.0.7",
